# chatgpt-memory

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rest_api.py  ui.py
chatgpt_memory/: constants.py  constants.py.d97f1e96452a1fde7991754f40378a97.tmp  environment.py  errors.py
chatgpt_memory/datastore/: __init__.py  config.py  datastore.py  redis.py  redis.py.a591791178ee356d1c4f5b0907d4bef1.tmp
chatgpt_memory/llm_client/: __init__.py  config.py  llm_client.py
chatgpt_memory/llm_client/openai/conversation/: chatgpt_client.py  config.py
chatgpt_memory/llm_client/openai/embedding/: config.py  embedding_client.py  embedding_client.py.e3cbeef62f5554ec5a01fae0f1c38403.tmp
chatgpt_memory/memory/: __init__.py  manager.py  memory.py
chatgpt_memory/utils/: openai_utils.py  reflection.py
examples/: simple_usage.py
tests/: conftest.py  test_llm_embedding_client.py  test_memory_manager.py  test_redis_datastore.py
